archive/tvheadend/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tvheadend
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: TVheadend
    gethomepage.dev/icon: tvheadend.png
    gethomepage.dev/href: https://tvheadend.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=tvheadend
    gethomepage.dev/widget.type: tvheadend
    gethomepage.dev/widget.url: http://tvheadend.media.svc.cluster.local
    gethomepage.dev/widget.key: 967adacc9d6641f081c0c2bad2cc2d29
spec:
  hostnames:
    - tvheadend.vaderrp.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  rules:
    - backendRefs:
      - name: tvheadend
        port: 9981
    - backendRefs:
      - name: tvheadend
        port: 9981
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove: [ "Range" ]
      matches:
        - path:
            type: PathPrefix
            value: /stream/channel
